Finally got the version strings fixed.  The issue I was seeing was with a custom build script that was trying to pull the SVN commit number, updated to use the short Git SHA instead

--- a/iPhone OS/Learn_Navi_iPhone_App-Info.plist
+++ b/iPhone OS/Learn_Navi_iPhone_App-Info.plist
@@ -47,5 +47,9 @@
 	<string>SVN_VERSION_GOES_HERE</string>
 	<key>UIStatusBarStyle</key>
 	<string>UIStatusBarStyleBlackOpaque</string>
+	<key>UISupportedInterfaceOrientations</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+	</array>
 </dict>
 </plist>
