--- a/iPhone OS/LearnNavi-Info.plist
+++ b/iPhone OS/LearnNavi-Info.plist
@@ -34,10 +34,10 @@
 	<true/>
 	<key>MMAppID</key>
 	<string>c142bc99fd6aa1eda1a3f17b6d9b09621589dc49</string>
-	<key>NSMainNibFile</key>
-	<string>MainWindow</string>
 	<key>SVN_Version</key>
 	<string>SVN_VERSION_GOES_HERE</string>
+	<key>UIMainStoryboardFile</key>
+	<string>MainStoryboard</string>
 	<key>UIStatusBarStyle</key>
 	<string>UIStatusBarStyleBlackOpaque</string>
 	<key>UISupportedInterfaceOrientations</key>
